--- a/sass/blocks/_questions.sass
+++ b/sass/blocks/_questions.sass
@@ -128,6 +128,8 @@
         margin-left: 50px
     div.services-title-block, div.services__block-text-right, .services__text
         width: 240px
+    img.cert__img
+        max-width: 679px
 @media ( max-width: 1280px )
     #hid
         width: 531px
@@ -226,7 +228,7 @@
         img: 466px
 @media ( max-width: 992px )
     #hid
-        width: 456px
+        width: 287px
         height: 100px
         left: -57px
         margin-bottom: -129px
@@ -293,6 +295,13 @@
     div.questions__form-wrapper
         margin: 514px 0 0 194px
 @media ( max-width: 550px )
+    .services__wrapper-right .services__block-text-right, .services__wrapper-right .services-title-block, .services__wrapper-right .services__text
+        width: 100px
+    section.cert 
+        div.cert__slider, .slick-initialized, .slick-slider, .slick-dotted
+            width: 360px
+    div#hid.questions__hidden
+        width: 300px
     #hid
         width: 425px
         height: 100px
@@ -303,7 +312,7 @@
     div.questions__form-wrapper
         height: 300px
         width: 174px
-        margin: 556px 0 0 173px
+        margin: 556px 0 0 100px
         #form-2
             input
                 width: 130px
@@ -341,3 +350,13 @@
         margin: 449px 0 0 96px
     section.questions
         height: 360px
+    div#hid.questions__hidden
+        width: 285px
+    section.cert 
+        div.cert__slider, .slick-initialized, .slick-slider, .slick-dotted
+            width: 320px
+    section.services   
+        div.services__text, div.services-title-block
+            width: 280px
+        div.services__text, div.services-title-block
+            width: 100px
