--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -17,9 +17,8 @@
         width: 620px
         height: 751px
         background: url('../img/background/footer-mask.png')
-        background: rgba(0, 101, 177, 0.6)
+        opacity: 0.7
         background-blend-mode: overlay
-        z-index: 999
         padding: 51px 51px 39px 51px
     &__wrapper-address
         display: flex
