Адаптация преде footer

--- a/sass/base/_media.sass
+++ b/sass/base/_media.sass
@@ -1151,6 +1151,31 @@
             font-size: 7px
     section.reviews
         height: 480px
+    nav.nav
+        justify-content: space-between
+    img.nav__logo
+        width: 70px
+    ul.nav__list
+        a
+            li
+                font-size: 11px
+                padding-left: 13px
+    div.nav__wrapper-phone
+        div.nav__wrapper-phone-column
+            a.nav__phone
+                font-size: 8px
+@media ( max-width: 480px )
+    img.nav__logo
+        width: 40px
+    ul.nav__list
+        a
+            li
+                font-size: 8px
+                padding-left: 0
+    div.nav__wrapper-phone
+        div.nav__wrapper-phone-column
+            a.nav__phone
+                font-size: 5px
 @media ( max-width: 450px )
     div.reviews__wrapper div.cert__slider, div.reviews__wrapper .cert .reviews__slider div
         width: 320px
