--- a/sass/blocks/_services.sass
+++ b/sass/blocks/_services.sass
@@ -96,3 +96,23 @@
             margin-top: 23px
         h2.services-title
             font-size: 12px
+    @media ( max-width: 356px )
+        .container
+            position: relative
+            display: block
+            max-width: 300px
+            margin: 0 auto
+        div.services__block-text-left, div.services__wrapper-left, div.services__text, div.services__wrapper-right, div.services-title-block
+            width: 100px
+            margin-left: 5px
+            line-height: 18px
+        .services__wrapper-all
+            justify-content: space-between
+        div.services-title-block
+            font-size: 10px
+        #r1
+            margin-top: 25px
+        #r2
+            margin-top: -17px
+        #r3
+            margin-top: 5px
