--- a/sass/base/_media.sass
+++ b/sass/base/_media.sass
@@ -1164,6 +1164,27 @@
         div.nav__wrapper-phone-column
             a.nav__phone
                 font-size: 8px
+    #map
+        height: 300px
+    #block
+        height: 300px
+    #f0
+    #f1
+        padding-top: 0
+    #f2
+        margin-top: 15px
+        line-height: 5px
+    #f3
+        margin-top: 10px
+    div.footer__wrapper-address
+        margin-top: 10px
+        line-height: 16px
+    div.footer__wrapper-social-icons
+        margin-top: 0
+    footer.footer
+        height: 280px
+    div.footer__line
+        height: 80px
 @media ( max-width: 480px )
     img.nav__logo
         width: 40px
