--- a/sass/blocks/_modal-forms.sass
+++ b/sass/blocks/_modal-forms.sass
@@ -6,7 +6,7 @@
         padding-top: 0
         width: 100%
         height: 100%
-        background-color: rgba(0, 0, 0, .56)
+        background-color: rgba(0, 0, 0, 0.7)
         z-index: 999999999999999999999
         .error
             text-align: center
@@ -35,9 +35,12 @@
     transform: translate(-50%, -50%)
     padding: 37px 100px 38px 100px
     input
-        width: 388px
-        margin: -5px 0 -5px 15px
-        border: none
+        height: 51.71px
+        width: 328px
+        margin: 10px 0 10px 15px
+        border: 1px solid rgba(0, 0, 0, 0.05)
+        box-sizing: border-box
+        border-radius: 10px
         color: #000000
 .button-modal
     border: none
