--- a/sass/base/_media.sass
+++ b/sass/base/_media.sass
@@ -1185,7 +1185,11 @@
         height: 280px
     div.footer__line
         height: 80px
+    nav#nav
+        height: 50px
 @media ( max-width: 480px )
+    nav#nav
+        height: 40px
     img.nav__logo
         width: 40px
     ul.nav__list
