Подключение шрифта Mont

--- a/sass/blocks/_company.sass
+++ b/sass/blocks/_company.sass
@@ -11,6 +11,7 @@
         justify-content: space-between
     &__wrapper-block
     &__text
+        font-family: Montserrat
         margin-top: 29px
         font-weight: bold
         font-size: 90px
@@ -21,6 +22,7 @@
         display: flex
         justify-content: space-between
     &__subtext
+        font-family: Mont-Regular
         font-style: normal
         font-weight: 500
         font-size: 26px
