--- a/sass/blocks/_coop.sass
+++ b/sass/blocks/_coop.sass
@@ -24,6 +24,7 @@
     &__text
         @include style-text
         text-align: center
+        font-family: Mont-Regular
     &__img
         @include img
         max-width: 478px
