--- a/sass/blocks/_forms.sass
+++ b/sass/blocks/_forms.sass
@@ -39,6 +39,7 @@ input
         height: 324px
         margin-top: -8px
     &__application
+        font-family: Mont-Bold
         text-align: center
         font-style: normal
         font-weight: bold
@@ -48,6 +49,10 @@ input
         margin-top: -24px
         margin-bottom: 35px
     &__form
+        input
+            font-family: Montserrat
+        button
+            font-family: Montserrat
     &__img-sale
         margin-left: 205px
         margin-top: 20px
