--- a/sass/blocks/_main.sass
+++ b/sass/blocks/_main.sass
@@ -28,6 +28,7 @@
         height: 63px
     // Стилизация текста рядом с галочкой
     &__text
+        font-family: Mont-SemiBold
         font-style: normal
         font-weight: 600
         font-size: 22px
