--- a/sass/blocks/_questions.sass
+++ b/sass/blocks/_questions.sass
@@ -33,6 +33,7 @@
         z-index: -999999999999999999
     // Заголовки в форме
     &__form-application
+        font-family: Mont-ExtraLight
         margin: 0 0 32px 0
         text-align: center
         font-style: normal
