--- a/sass/blocks/_services.sass
+++ b/sass/blocks/_services.sass
@@ -21,6 +21,7 @@
         width: 395px
     &__text
         @include style-text
+        font-family: Mont-Regular
     &__img
         @include img
     @media ( max-width: 1168px )
