--- a/sass/blocks/_title.sass
+++ b/sass/blocks/_title.sass
@@ -9,6 +9,7 @@
         color: #0065B1
 // Подзаголовок в первой секции
 .main-sub-title
+    font-family: Mont-SemiBold
     font-style: normal
     font-weight: 400
     font-size: 23px
@@ -36,6 +37,7 @@
     @include style-text-title
     text-align: center
 .cert-title
+    font-family: Mont-Bold
     font-style: normal
     font-weight: bold
     font-size: 38px
