--- a/sass/base/_base.sass
+++ b/sass/base/_base.sass
@@ -4,6 +4,8 @@
 	font-family: 'Montserrat', sans-serif
 *
 	font-family: 'Roboto', sans-serif
+* 
+	font-family: 'Mont', sans-serif
 body
 	margin: 0
 
