--- a/sass/blocks/_job.sass
+++ b/sass/blocks/_job.sass
@@ -12,6 +12,7 @@
         margin-top: 200px
     &__text
         @include style-text
+        font-family: Mont-Regular
         padding-top: 34px
     &__wrapper-up
         display: flex
