--- a/sass/base/_media.sass
+++ b/sass/base/_media.sass
@@ -1263,3 +1263,6 @@
             font-size: 7px
         label#text-error.error
             font-size: 7px
+    div.nav__wrapper-phone div.nav__wrapper-phone-column a.nav__phone
+        font-size: 4px
+        line-height: 9px
