--- a/sass/base/_media.sass
+++ b/sass/base/_media.sass
@@ -1187,6 +1187,8 @@
         height: 80px
     nav#nav
         height: 50px
+    button.nav-button
+        font-size: 4px
 @media ( max-width: 480px )
     nav#nav
         height: 40px
@@ -1266,3 +1268,30 @@
     div.nav__wrapper-phone div.nav__wrapper-phone-column a.nav__phone
         font-size: 4px
         line-height: 9px
+    button.nav-button
+        font-size: 4px
+    form.forms, .forms-application, .forms-application_active
+        width: 270px
+        height: 230px
+        padding: 10px
+    div.modal-forms__title
+        font-size: 14px
+        line-height: 16px
+    form.forms input, form.forms-application input
+        width: 170px
+        height: 41px
+        font-size: 11px
+        margin-left: 40px
+        padding-left: 15px
+    form.forms button, form.forms-application button
+        width: 163px
+        height: 46px
+        font-size: 10px
+        margin-top: 0
+    form#application
+        label#phone-error.error
+            font-size: 8px
+            margin: 0
+        label#name-error.error
+            font-size: 8px
+            margin: 0
