--- a/sass/blocks/_modal-forms.sass
+++ b/sass/blocks/_modal-forms.sass
@@ -43,6 +43,7 @@
         border-radius: 10px
         color: #000000
 .button-modal
+    font-family: Montserrat
     border: none
     width: 276px
     height: 60.17px
