--- a/sass/blocks/_title.sass
+++ b/sass/blocks/_title.sass
@@ -1,6 +1,7 @@
 // Стилизация заголовков
 // Первый заголовок в первой секции
 .main-title
+    font-family: Roboto
     font-style: normal
     font-weight: bold
     font-size: 38px
@@ -19,9 +20,12 @@
 .services-title
     margin-top: 63px
     @include title
+    font-family: Roboto
 .services-title-block
     @include style-text-title
+    font-family: Roboto
 .company-title
+    font-family: Roboto
     padding-top: 95px
     text-align: center
     font-style: normal
@@ -33,9 +37,11 @@
 .coop-title
     margin-top: 144px
     @include title
+    font-family: Roboto
 .coop-title-block
     @include style-text-title
     text-align: center
+    font-family: Roboto
 .cert-title
     font-family: Mont-Bold
     font-style: normal
@@ -50,12 +56,15 @@
     @include title
     text-align: center
     margin-top: 135px
+    font-family: Roboto
 .job-title-block
     @include style-text-title
     text-align: center
+    font-family: Roboto
 .questions-title
     @include title
     margin-top: 135px
+    font-family: Roboto
 .footer-title
     font-style: normal
     font-weight: bold
@@ -63,3 +72,5 @@
     line-height: 58px
     color: #FFFFFF
     text-align: center
+.reviews-title
+    font-family: Roboto
