--- a/sass/blocks/_button.sass
+++ b/sass/blocks/_button.sass
@@ -3,6 +3,7 @@
 // Кнопка в навигационном меню
 .nav-button
     // Стилизация кнопки
+    font-family: Montserrat
     display: block
     width: 198px
     height: 50px
@@ -47,6 +48,7 @@
         box-shadow: 0px 7px 20px #BC9329
 // Кнопка во второй секции
 .services-button
+    font-family: Montserrat
     display: block
     margin: 0 auto
     margin-top: 124px
@@ -98,6 +100,7 @@
     width: 335px
 #form-2
     button
+        font-family: Montserrat
         width: 350px
         height: 73px
         margin: 0 auto
