--- a/sass/blocks/_nav.sass
+++ b/sass/blocks/_nav.sass
@@ -35,6 +35,7 @@
         text-decoration: none
         padding-left: 78px
     li
+        font-family: Roboto
         color: #333333
         &:hover
             color: #0065B1
@@ -45,6 +46,7 @@
     &__wrapper-phone-column
         padding: 0 64px 0 50px
     &__phone
+        font-family: Roboto
         font-style: normal
         font-weight: bold
         font-size: 20px
