--- a/sass/blocks/_forms.sass
+++ b/sass/blocks/_forms.sass
@@ -58,3 +58,8 @@ input
         margin-top: 20px
         width: 300px
         height: 250px
+form#application
+    label#phone-error.error
+        margin: 0
+    label#name-error.error
+        margin: 0
