Переделал блоки вертикально, моб.

--- a/sass/base/_media.sass
+++ b/sass/base/_media.sass
@@ -1295,3 +1295,101 @@
         label#name-error.error
             font-size: 8px
             margin: 0
+@media ( max-width: 375px )
+    div.coop__wrapper-all
+        flex-direction: column
+        align-items: center
+    div.coop__block-text-left-v, div.coop__block-text-right-v
+        width: 150px
+        padding-top: 0
+        padding-bottom: 0
+    div.coop__block-text-left
+        width: 150px
+    div.coop-title-block
+        line-height: 19px
+    div.coop__text
+        line-height: 21px
+    section.coop
+        height: 1320px
+    section.job
+        height: 1000px
+    div.job__wrapper-up
+        margin-top: 30px
+        // 5
+        div.job__wrapper-left
+            position: absolute
+            top: 56%
+    div.job__wrapper-down
+        margin-top: 0
+        // 4
+        div.job__wrapper-right-2
+            position: absolute
+            top: 43%
+    div.job-title-block
+        display: block
+        margin: 0 auto
+        width: 320px
+        margin-top: 30px
+        line-height: 15px
+    div.job__text
+        line-height: 21px
+    div.job__wrapper-left-2
+        display: block
+        margin: 0 auto
+        div.job__numbers
+            left: 50%
+            transform: translateX(-50%)
+            top: -31px
+    div.job__wrapper-left
+        display: block
+        margin: 0 auto
+        position: absolute
+        width: 320px
+        max-width: 375px
+        div.job__numbers-2
+            left: 50%
+            transform: translateX(-50%)
+            top: -30px
+    div.job__wrapper-center
+        display: block
+        margin: 0 auto
+        width: 320px
+        max-width: 375px
+        div.job__numbers-3
+            left: 50%
+            transform: translateX(-50%)
+            top: -60px
+    div.job__wrapper-down
+    div.job__wrapper-right-2
+        display: block
+        margin: 0 auto
+        width: 320px
+        max-width: 375px
+        margin-top: 10px
+        div.job__numbers-4
+            left: 50%
+            transform: translateX(-50%)
+            top: -32px
+    div.job__wrapper-left
+        display: block
+        margin: 0 auto
+        max-width: 375px
+        div.job__numbers-5
+            left: 50%
+            transform: translateX(-50%)
+            top: -32px
+    div.job__wrapper-left, .job .job__wrapper-right, .job .job__wrapper-center, .job .job__wrapper-left-2, .job .job__wrapper-right-2
+        max-width: 375px
+    div.job__wrapper-down div.job__wrapper-right-2
+        width: 375px
+    div.job__wrapper-left, .job .job__wrapper-right, .job .job__wrapper-center, .job .job__wrapper-left-2, .job .job__wrapper-right-2
+        width: 375px
+    // img.coop__img, img.coop__colling, img.coop__arrow
+    //     display: none
+    // img.job__img
+    //     display: none
+    @media ( max-width: 320px )
+        div.job__wrapper-down div.job__wrapper-right-2
+            width: 320px
+        div.job__wrapper-left, .job .job__wrapper-right, .job .job__wrapper-center, .job .job__wrapper-left-2, .job .job__wrapper-right-2
+            width: 320px
